# purple-air-gui

./: .gitignore  Cargo.toml  README.md  device_url
assets/: device_thermostat_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.tvg  dew_point_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.tvg  humidity_percentage_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.tvg
src/: main.rs  sensor_data.rs
