[package]
name = "purple-air-gui"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
overflow-checks = false
debug-assertions = false

[dependencies]
chrono = { version = "0.4.41", features = ["serde", "std", "clock", "wasmbind"], default-features = false }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.19", default-features = false, features = ["blocking"] }

[dependencies.craft]
path = "../craft/crates/craft"
default-features = false
features = ["vello_renderer", "devtools", "accesskit", "sytem_fonts"]
package = "craft_gui"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.45.1"
default-features = false
features = ["rt-multi-thread", "sync", "time"]